fix: java 버전 문제 해결